mongo ts init setup

--- a/learna-serverless-tsoa-react-template/packages/api/package.json
+++ b/learna-serverless-tsoa-react-template/packages/api/package.json
@@ -8,20 +8,24 @@
     "deploy-dev": "npm run build && npm run fix-swagger && sls deploy -v",
     "build": "npm run clean && npm run routes-gen && npm run lint && npm run swagger-gen ",
     "lint": "tslint ./src/**/*.ts",
+    "lint:fix": "tslint --fix ./src/**/*.ts",
     "clean": "rimraf _gen",
     "swagger-gen": "tsoa spec",
     "fix-swagger": "bash -c './scripts.sh fix-swagger'",
     "routes-gen": "bash -c 'mkdir -p _gen/routes' && tsoa routes",
     "tsoa": "tsoa"
   },
-  "author": "Mike Rosack <mike@rosacksoftwaresolutions.com> (https://www.rosacksoftwaresolutions.com)",
+  "author": "Lev Stambler <levstamb@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "inversify": "^5.0.1",
     "inversify-binding-decorators": "^4.0.0",
+    "mongoose": "^5.11.13",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.19",
+    "ts-mongoose": "0.0.24",
     "tsoa": "^3.2.1",
     "winston": "^3.3.3"
   },
